dark mode correction

--- a/src/components/routes/contacts/contacts.styles.scss
+++ b/src/components/routes/contacts/contacts.styles.scss
@@ -8,11 +8,13 @@
   
     h2 {
       margin-bottom: 20px;
+      color: black;
     }
     
     p {
       margin: 10px 0;
       font-size: 18px;
+      color: black;
   
       a {
         color: #007bff;
